--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-description = "Mommy's here to support you when running cargo~"
-repository = "https://github.com/Gankra/cargo-mommy"
+description = "House's here to support you when running cargo~"
 license = "MIT OR Apache-2.0"
-name = "cargo-mommy"
+name = "cargo-house"
 version = "0.3.1"
 edition = "2021"
 
